# synix

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
synix/: Cargo.toml
synix-lexer/: Cargo.toml
synix-lexer/src/: buffer.rs  error.rs  group.rs  ident.rs  lib.rs  literal.rs  punct.rs  span.rs  token_stream.rs
synix-lexer/tests/: group.rs  ident.rs  literal.rs  punct.rs  ui.rs
synix-parser/: Cargo.toml
synix-parser/src/: attrset.rs  binary.rs  ident.rs  let.rs  lib.rs  lit.rs
synix-parser/tests/: basic.rs
synix/src/: assignment.rs  attrset.rs  binary.rs  error.rs  function_call.rs  ident.rs  lambda.rs  let.rs  lib.rs  list.rs  lit.rs  parenthesized.rs  path.rs  span.rs  token.rs  with.rs
synix/src/token/: delimiter.rs  ident.rs  mod.rs  punct.rs
synix/tests/: basic.rs  common.rs  lambda.rs
